import TestimonialCardTestCases from "../TestimonialCardTestCases";
import testRunner from "../../../Services/testRunner/testRunner";

TestimonialCardTestCases.map(testRunner);
